--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="/BreakingBadAPI/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Breaking Bad API</title>
-    <script type="module" crossorigin src="/assets/index.5a287cea.js"></script>
-    <link rel="stylesheet" href="/assets/index.cc919861.css">
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/BreakingBadAPI/assets/index.8feb9f84.js"></script>
+    <link rel="stylesheet" href="/BreakingBadAPI/assets/index.63d4af00.css">
   </head>
   <body>
     <div id="app"></div>
