--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/BreakingBadAPI/favicon.ico">
+    <link rel="icon" href="./icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/BreakingBadAPI/assets/index.e3a57215.js"></script>
-    <link rel="stylesheet" href="/BreakingBadAPI/assets/index.4d842c24.css">
+    <title>Breaking Bad</title>
+    <script type="module" crossorigin src="/BreakingBadAPI/assets/index.7fa94a8d.js"></script>
+    <link rel="stylesheet" href="/BreakingBadAPI/assets/index.b4f28e11.css">
   </head>
   <body>
     <div id="app"></div>
